--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
   </properties>
 
   <dependencies>
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.4</version>
+	</dependency>
   	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context</artifactId>
